--- a/pomodoro/index.html
+++ b/pomodoro/index.html
@@ -53,7 +53,9 @@
     <!-- Main Timer Container -->
     <div class="pomodoro-container">
       <!-- Title -->
-      <h1 class="pomodoro-title">Pomodoro Timer</h1>
+      <a href="info.html" style="text-decoration: none;">
+        <h1 class="pomodoro-title">Pomodoro Timer</h1>
+      </a>
 
       <!-- Phase Indicator Badge (Working/Break/Long Break) -->
       <div class="pomodoro-phase-indicator">
