--- a/pomodoro/index.html
+++ b/pomodoro/index.html
@@ -50,6 +50,11 @@
       <i class="fas fa-arrow-left"></i> Back
     </a>
 
+    <!-- Info Navigation Link -->
+    <a class="pomodoro-back-link" href="info.html" style="left: auto; right: 30px;">
+      <i class="fas fa-info-circle"></i> Info
+    </a>
+
     <!-- Main Timer Container -->
     <div class="pomodoro-container">
       <!-- Title -->
